add introduction to pyautogui and param usage of autoit

--- a/selenium_note.ipynb
+++ b/selenium_note.ipynb
@@ -289,7 +289,7 @@
       "cell_type": "markdown",
       "source": [
         "### 按键程序\n",
-        "\n点击下载按钮后弹出的 os 对话框无法通过 Selenium 处理，要么最初就设置成不弹窗直接下载，要么只能靠调用外部程序（比如 AutoIt）来操作"
+        "\n点击下载按钮后弹出的 os 对话框无法通过 Selenium 处理，要么最初就设置成不弹窗直接下载，要么只能靠调用外部程序来操作。比如 AutoIt（os 窗口元素定位），pyautogui（屏幕像素定位）"
       ],
       "metadata": {}
     },
@@ -299,9 +299,9 @@
         "# subprocess 和 os 模块差不多\n",
         "import subprocess\n",
         "\n",
-        "# 调起外部程序\n",
-        "subprocess.call('programname')\n",
-        "# AutoIt 程序相对简单，放到了另一个 repo 里"
+        "# 调起外部程序，可以通过str.format等文本格式化方式传入命令行参数\n",
+        "subprocess.call('programname {0}'.format('param'))\n",
+        "# AutoIt 程序相对简单，写在另一个 .au3 文件里"
       ],
       "outputs": [],
       "execution_count": null,
